--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "type": "git",
     "url": "git+https://github.com/shuding/nextra-docs-template.git"
   },
-
   "dependencies": {
     "next": "^13.0.6",
     "nextra": "latest",
@@ -21,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "18.11.10",
+    "@types/react": "18.2.8",
     "typescript": "^4.9.3"
   }
 }
