--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "git+https://github.com/shuding/nextra-docs-template.git"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.2",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
